    Additional parameters (to script or powershell) will be ignored in this case.
  * oslog: new property WriteComponentFile. if true a logfile for every component (product)
    is (re)written.
  * osconf: new config: opsi-script.global.writeProductLogFile (default=false)
  * oslog: changed histrory line to:
    'handled: <productid> Version: <versiion> Request: <request> Result: <result>

-- d.oertel <d.oertel@uib.de> Wed, 15 Dec 2021 15:00


opsi-script (4.12.4.33) stable; urgency=low

  * osparser: more debug logs in getFileInfoMap
  * osparser: getFileInfoMap: catch exceptions
  * versionx: catch exceptions in GetString

-- d.oertel <d.oertel@uib.de> Fri, 03 Dec 2021 15:00


opsi-script (4.12.4.32) stable; urgency=low

  * osparser: files section: unzip create target dir
  * added unit oscertificates
  * new void function ImportCertToSystem(<cert file name>)
  * oscertificates: add functions for linux /mac
  * osfunclin: getPackageLock: fix for zypper, general fix
  * ostxstinglist: new method: getStringValueWithDefault
  * GetProductProperty: if no service context, tries to find property in %scriptpah%/properties.conf
  * GetProductPropertyList: if no service context, tries to find property in %scriptpath%/properties.conf
  * new: stringlist literals in json style are allowed now (set $list$ = '["he","ho"]')
  * fix overwrite GUI messages by standard skinreload from  doAktionen
  * new: allow after DefVar inital value: defvar $str$ = "huhu"
  * new: allow after DefStringlist inital value: defstringlist $list$ = '["he","ho"]'
  * oswebservice: getSubListResult: fix for access violation in getproductpropertylist
  * osjson: jsonAsArrayToStringList: fix '[]' is empty array

-- d.oertel <d.oertel@uib.de> Fri, 19 Nov 2021 15:00


opsi-script (4.12.4.31) stable; urgency=low

  * osfunc: AllCopyRecursive: for better performance:
        doNotChangeAccessRights: boolean = True;
  * osparser: executeWith + powershellcall: enable runasloggedonuser